--- a/Eclipse/DogsManagementSystem/src/main/resources/templates/home.html
+++ b/Eclipse/DogsManagementSystem/src/main/resources/templates/home.html
@@ -2,9 +2,25 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Home Page</title>
 </head>
 <body>
+	<div class="container">
+		<h2>Welcome to Dogs Management System</h2>
+
+		<br /> <br /> <br /> <br />
+		<form action="search">
+			<input type="text" name="id" placeholder="id" />
+		</form>
+		<br />
+		<form action="add">
+			<input type="submit" value="Add new dog">
+		</form>
+		<br />
+		<form action="viewModifyDelete">
+			<input type="submit" value="View/Modify/Delete Dogs">
+		</form>
+	</div>
 
 </body>
 </html>
