--- a/Eclipse/DogsManagementSystem/src/main/resources/templates/home.html
+++ b/Eclipse/DogsManagementSystem/src/main/resources/templates/home.html
@@ -10,11 +10,15 @@
 
 		<br /> <br /> <br /> <br />
 		<form action="search">
-			<input type="text" name="id" placeholder="id" />
+			<input type="text" name="id" placeholder="id" /> <input type="submit" value="Search">
 		</form>
 		<br />
 		<form action="add">
 			<input type="submit" value="Add new dog">
+		</form>
+		<br />
+		<form action="addTrainer">
+			<input type="submit" value="Add New Trainer">
 		</form>
 		<br />
 		<form action="viewModifyDelete">
